<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>SGPM01_imu</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="huizeyu@foxmail.com">hzy</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
